fix(rewrite): added missing prefix to routes
